<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/color1"
    android:paddingBottom="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/openaccount"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/validityscript"
      android:textSize="22dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/cmpnyname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/btn_opennow"
            android:text="@string/cmpnyname"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="17dp"/>

        <Button
            android:id="@+id/btn_opennow"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/rounded_corner_button"
            android:text="@string/opennow"
            android:textColor="@color/color1"
            android:textSize="10dp"/>

    </RelativeLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/btn_opennow"
        android:text="@string/addson"
        android:textSize="12dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

</LinearLayout>